dparse_tables.h

struct D_Parser;
typedef struct d_loc_t {
  char *s, *pathname, *ws;
  int col, line;
} d_loc_t;
typedef void (*D_WhiteSpaceFn)(struct D_Parser *p, d_loc_t *loc, void **p_globals);
typedef int (*D_ScanCode)(d_loc_t *loc, unsigned short *symbol, int *term_priority, unsigned char *op_assoc,
                          int *op_priority);
typedef struct D_Reduction {
  unsigned short nelements;
  unsigned short symbol;
  D_ReductionCode speculative_code;
  D_ReductionCode final_code;
  unsigned short op_assoc;
  unsigned short rule_assoc;
  int op_priority;
  int rule_priority;
  int action_index;
  int npass_code;
  D_ReductionCode *pass_code;
} D_Reduction;
typedef struct D_RightEpsilonHint {
  unsigned short depth;
  unsigned short preceeding_state;
  D_Reduction *reduction;
} D_RightEpsilonHint;
typedef struct D_ErrorRecoveryHint {
  unsigned short depth;
  unsigned short symbol;
  const char *string;
} D_ErrorRecoveryHint;
typedef struct D_Shift {
  unsigned short symbol;
  unsigned char shift_kind;
  unsigned char op_assoc;
  int op_priority;
  int term_priority;
  int action_index;
  D_ReductionCode speculative_code;
} D_Shift;
typedef struct D_State {
  unsigned char *goto_valid;
  int goto_table_offset;
  struct {
    unsigned int n;
    D_Reduction **v;
  } reductions;
  struct {
    unsigned int n;
    D_RightEpsilonHint *v;
  } right_epsilon_hints;
  struct {
    unsigned int n;
    D_ErrorRecoveryHint *v;
  } error_recovery_hints;
  int shifts;
  D_ScanCode scanner_code;
  void *scanner_table;
  unsigned char scanner_size;
  unsigned char accept;
  unsigned char scan_kind;
  void *transition_table;
  D_Shift ***accepts_diff;
  int reduces_to;
} D_State;
typedef struct D_Symbol {
  unsigned int kind;
  const char *name;
  int name_len;
  int start_symbol;
} D_Symbol;
typedef struct D_Pass {
  char *name;
  unsigned int name_len;
  unsigned int kind;
  unsigned int index;
} D_Pass;
typedef struct D_ParserTables {
  unsigned int nstates;
  D_State *state;
  unsigned short *goto_table;
  unsigned int whitespace_state;
  unsigned int nsymbols;
  D_Symbol *symbols;
  D_WhiteSpaceFn default_white_space;
  unsigned int npasses;
  D_Pass *passes;
  unsigned int save_parse_tree;
} D_ParserTables;
void parse_whitespace(struct D_Parser *p, d_loc_t *loc, void **p_globals);