rust/dparser_lib/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_Pass"][::std::mem::size_of::<D_Pass>() - 24usize];
    ["Alignment of D_Pass"][::std::mem::align_of::<D_Pass>() - 8usize];
    ["Offset of field: D_Pass::name"][::std::mem::offset_of!(D_Pass, name) - 0usize];
    ["Offset of field: D_Pass::name_len"][::std::mem::offset_of!(D_Pass, name_len) - 8usize];
    ["Offset of field: D_Pass::kind"][::std::mem::offset_of!(D_Pass, kind) - 12usize];
    ["Offset of field: D_Pass::index"][::std::mem::offset_of!(D_Pass, index) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_ParserTables {
    pub nstates: ::std::os::raw::c_uint,
    pub state: *mut D_State,
    pub goto_table: *mut ::std::os::raw::c_ushort,
    pub whitespace_state: ::std::os::raw::c_uint,
    pub nsymbols: ::std::os::raw::c_uint,
    pub symbols: *mut D_Symbol,
    pub default_white_space: D_WhiteSpaceFn,
    pub npasses: ::std::os::raw::c_uint,
    pub passes: *mut D_Pass,
    pub save_parse_tree: ::std::os::raw::c_uint,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_ParserTables"][::std::mem::size_of::<D_ParserTables>() - 72usize];
    ["Alignment of D_ParserTables"][::std::mem::align_of::<D_ParserTables>() - 8usize];
    ["Offset of field: D_ParserTables::nstates"]
        [::std::mem::offset_of!(D_ParserTables, nstates) - 0usize];
    ["Offset of field: D_ParserTables::state"]
        [::std::mem::offset_of!(D_ParserTables, state) - 8usize];
    ["Offset of field: D_ParserTables::goto_table"]
        [::std::mem::offset_of!(D_ParserTables, goto_table) - 16usize];
    ["Offset of field: D_ParserTables::whitespace_state"]
        [::std::mem::offset_of!(D_ParserTables, whitespace_state) - 24usize];
    ["Offset of field: D_ParserTables::nsymbols"]
        [::std::mem::offset_of!(D_ParserTables, nsymbols) - 28usize];
    ["Offset of field: D_ParserTables::symbols"]
        [::std::mem::offset_of!(D_ParserTables, symbols) - 32usize];
    ["Offset of field: D_ParserTables::default_white_space"]
        [::std::mem::offset_of!(D_ParserTables, default_white_space) - 40usize];
    ["Offset of field: D_ParserTables::npasses"]
        [::std::mem::offset_of!(D_ParserTables, npasses) - 48usize];
    ["Offset of field: D_ParserTables::passes"]
        [::std::mem::offset_of!(D_ParserTables, passes) - 56usize];
    ["Offset of field: D_ParserTables::save_parse_tree"]
        [::std::mem::offset_of!(D_ParserTables, save_parse_tree) - 64usize];
};
unsafe extern "C" {
    pub fn parse_whitespace(
        p: *mut D_Parser,
        loc: *mut d_loc_t,
        p_globals: *mut *mut ::std::os::raw::c_void,
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_SymHash {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_Sym {
    pub name: *mut ::std::os::raw::c_char,
    pub len: ::std::os::raw::c_int,
    pub hash: ::std::os::raw::c_uint,
    pub scope: *mut D_Scope,
    pub update_of: *mut D_Sym,
    pub next: *mut D_Sym,
    pub user: ::std::os::raw::c_uint,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_Sym"][::std::mem::size_of::<D_Sym>() - 48usize];
    ["Alignment of D_Sym"][::std::mem::align_of::<D_Sym>() - 8usize];
    ["Offset of field: D_Sym::name"][::std::mem::offset_of!(D_Sym, name) - 0usize];
    ["Offset of field: D_Sym::len"][::std::mem::offset_of!(D_Sym, len) - 8usize];
    ["Offset of field: D_Sym::hash"][::std::mem::offset_of!(D_Sym, hash) - 12usize];
    ["Offset of field: D_Sym::scope"][::std::mem::offset_of!(D_Sym, scope) - 16usize];
    ["Offset of field: D_Sym::update_of"][::std::mem::offset_of!(D_Sym, update_of) - 24usize];
    ["Offset of field: D_Sym::next"][::std::mem::offset_of!(D_Sym, next) - 32usize];
    ["Offset of field: D_Sym::user"][::std::mem::offset_of!(D_Sym, user) - 40usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_Scope {
    pub _bitfield_align_1: [u8; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize]>,
    pub depth: ::std::os::raw::c_uint,
    pub ll: *mut D_Sym,
    pub hash: *mut D_SymHash,
    pub updates: *mut D_Sym,
    pub search: *mut D_Scope,
    pub dynamic: *mut D_Scope,
    pub up: *mut D_Scope,
    pub up_updates: *mut D_Scope,
    pub down: *mut D_Scope,
    pub down_next: *mut D_Scope,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_Scope"][::std::mem::size_of::<D_Scope>() - 80usize];
    ["Alignment of D_Scope"][::std::mem::align_of::<D_Scope>() - 8usize];
    ["Offset of field: D_Scope::depth"][::std::mem::offset_of!(D_Scope, depth) - 4usize];
    ["Offset of field: D_Scope::ll"][::std::mem::offset_of!(D_Scope, ll) - 8usize];
    ["Offset of field: D_Scope::hash"][::std::mem::offset_of!(D_Scope, hash) - 16usize];
    ["Offset of field: D_Scope::updates"][::std::mem::offset_of!(D_Scope, updates) - 24usize];
    ["Offset of field: D_Scope::search"][::std::mem::offset_of!(D_Scope, search) - 32usize];
    ["Offset of field: D_Scope::dynamic"][::std::mem::offset_of!(D_Scope, dynamic) - 40usize];
    ["Offset of field: D_Scope::up"][::std::mem::offset_of!(D_Scope, up) - 48usize];
    ["Offset of field: D_Scope::up_updates"][::std::mem::offset_of!(D_Scope, up_updates) - 56usize];
    ["Offset of field: D_Scope::down"][::std::mem::offset_of!(D_Scope, down) - 64usize];
    ["Offset of field: D_Scope::down_next"][::std::mem::offset_of!(D_Scope, down_next) - 72usize];
};
impl D_Scope {
    #[inline]
    pub fn kind(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 2u8) as u32) }
    }
    #[inline]
    pub fn set_kind(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 2u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn kind_raw(this: *const Self) -> ::std::os::raw::c_uint {
        unsafe {
            ::std::mem::transmute(<__BindgenBitfieldUnit<[u8; 1usize]>>::raw_get(
                ::std::ptr::addr_of!((*this)._bitfield_1),
                0usize,
                2u8,
            ) as u32)
        }
    }
    #[inline]
    pub unsafe fn set_kind_raw(this: *mut Self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<[u8; 1usize]>>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                0usize,
                2u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn owned_by_user(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(2usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_owned_by_user(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(2usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn owned_by_user_raw(this: *const Self) -> ::std::os::raw::c_uint {
        unsafe {
            ::std::mem::transmute(<__BindgenBitfieldUnit<[u8; 1usize]>>::raw_get(
                ::std::ptr::addr_of!((*this)._bitfield_1),
                2usize,
                1u8,
            ) as u32)
        }
    }
    #[inline]
    pub unsafe fn set_owned_by_user_raw(this: *mut Self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<[u8; 1usize]>>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                2usize,
                1u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        kind: ::std::os::raw::c_uint,
        owned_by_user: ::std::os::raw::c_uint,
    ) -> __BindgenBitfieldUnit<[u8; 1usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize]> = Default::default();
        __bindgen_bitfield_unit.set(0usize, 2u8, {
            let kind: u32 = unsafe { ::std::mem::transmute(kind) };
            kind as u64
        });
        __bindgen_bitfield_unit.set(2usize, 1u8, {
            let owned_by_user: u32 = unsafe { ::std::mem::transmute(owned_by_user) };
            owned_by_user as u64
        });
        __bindgen_bitfield_unit
    }
}
unsafe extern "C" {
    pub fn new_D_Scope(parent: *mut D_Scope) -> *mut D_Scope;
}
unsafe extern "C" {
    pub fn enter_D_Scope(current: *mut D_Scope, scope: *mut D_Scope) -> *mut D_Scope;
}
unsafe extern "C" {
    pub fn commit_D_Scope(scope: *mut D_Scope) -> *mut D_Scope;
}
unsafe extern "C" {
    pub fn equiv_D_Scope(scope: *mut D_Scope) -> *mut D_Scope;
}
unsafe extern "C" {
    pub fn global_D_Scope(scope: *mut D_Scope) -> *mut D_Scope;
}
unsafe extern "C" {
    pub fn scope_D_Scope(current: *mut D_Scope, scope: *mut D_Scope) -> *mut D_Scope;
}
unsafe extern "C" {
    pub fn free_D_Scope(st: *mut D_Scope, force: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn new_D_Sym(
        st: *mut D_Scope,
        name: *mut ::std::os::raw::c_char,
        end: *mut ::std::os::raw::c_char,
        sizeof_D_Sym: ::std::os::raw::c_int,
    ) -> *mut D_Sym;
}
unsafe extern "C" {
    pub fn find_D_Sym(
        st: *mut D_Scope,
        name: *mut ::std::os::raw::c_char,
        end: *mut ::std::os::raw::c_char,
    ) -> *mut D_Sym;
}
unsafe extern "C" {
    pub fn find_global_D_Sym(
        st: *mut D_Scope,
        name: *mut ::std::os::raw::c_char,
        end: *mut ::std::os::raw::c_char,
    ) -> *mut D_Sym;
}
unsafe extern "C" {
    pub fn update_D_Sym(
        sym: *mut D_Sym,
        st: *mut *mut D_Scope,
        sizeof_D_Sym: ::std::os::raw::c_int,
    ) -> *mut D_Sym;
}
unsafe extern "C" {
    pub fn update_additional_D_Sym(
        st: *mut D_Scope,
        sym: *mut D_Sym,
        sizeof_D_Sym: ::std::os::raw::c_int,
    ) -> *mut D_Sym;
}
unsafe extern "C" {
    pub fn current_D_Sym(st: *mut D_Scope, sym: *mut D_Sym) -> *mut D_Sym;
}
unsafe extern "C" {
    pub fn find_D_Sym_in_Scope(
        st: *mut D_Scope,
        cur: *mut D_Scope,
        name: *mut ::std::os::raw::c_char,
        end: *mut ::std::os::raw::c_char,
    ) -> *mut D_Sym;
}
unsafe extern "C" {
    pub fn next_D_Sym_in_Scope(st: *mut *mut D_Scope, sym: *mut *mut D_Sym) -> *mut D_Sym;
}
unsafe extern "C" {
    pub fn print_scope(st: *mut D_Scope);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_Parser_User {
    _unused: [u8; 0],
}
